# BareMetalNIC

./: CHANGELOG.md  CMakeLists.txt  PROJECT_SUMMARY.md  README.md
examples/: CMakeLists.txt  basic_usage.cpp  broadcom_example.cpp  solarflare_example.cpp
include/ull_nic/: broadcom_netxtreme.hpp  common_types.hpp  custom_driver.hpp  solarflare_efvi.hpp  ull_nic.hpp
scripts/: setup_vfio.sh
website/: next.config.js  package.json  tailwind.config.js
website/app/: layout.tsx  page.tsx
website/components/: Changelog.tsx  Features.tsx  Hero.tsx  QuickStart.tsx  SEO.tsx
website/styles/: globals.css
